[tool.poetry]
name = "hcaptcha-verifier"
version = "0.1.0"
description = ""
authors = ["Divanshu Chauhan <23524935+Divkix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
prettyconf = "^2.2.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
pre-commit = "^2.18.1"
isort = "^5.10.1"
pyclean = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
